# This file is part of Rust-Bijection.
# Copyright 2016 Binary Birch Tree
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bijection"
version = "0.1.0"
authors = ["Binary Birch Tree <binarybirchtree@users.noreply.github.com>"]
description = "A library for producing bijective functions in Rust."
documentation = "https://binarybirchtree.github.io/rust-bijection/bijection"
repository = "https://github.com/binarybirchtree/rust-bijection"
keywords = ["bijection", "bijective", "function"]
license = "Apache-2.0"
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

[dependencies]
arrayref = "0.3.2"
byteorder = "0.5.3"
matches = "0.1.2"
rust-crypto = "0.2.36"
